Changed font-family to Arial

--- a/block.en.html
+++ b/block.en.html
@@ -4,6 +4,7 @@
     <title>Sorry! Your browser is not supported.</title>
     <style>
       body {
+        font-family: Arial;
         font-size: 50px;
         text-align: center;
         margin: auto;
