--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>connect-block : best browser compatible solution.</title>
     <style>
+      body{
+        font-family: Arial;
+      }
       #block {
         font-size: 50px;
         text-align: center;
@@ -66,7 +69,7 @@
         }
     ).listen(3000);
     </pre>
-    If your browser is IE6-IE8, you will got this screen.
+    If you do not browse http://localhost:3000 with IE6-IE8, you will got "You have passed", but if you do you will got this screen.
     <div id="block">
       <p>Sorry! Your browser is not supported.</p>
       <p style="font-size: 80px">Choose another browser</p>
