--- a/lib/block.zh.html
+++ b/lib/block.zh.html
@@ -24,8 +24,8 @@
   </head>
   <body>
     <div>
-      <p>對不起，不支持您的瀏覽器。</p>
-      <p style="font-size: 80px">請另選瀏覽器</p>
+      <p>對不起，本站不支持您的瀏覽器。</p>
+      <p style="font-size: 80px">請選擇其他瀏覽器</p>
       <p>
       <a href="http://www.google.com/chrome/">谷歌瀏覽器<!--chrome icon--></a> | 
       <a href="http://www.mozilla.com/en-US/firefox/fx/">火狐瀏覽器<!--chrome icon--></a> |
