--- a/lib/block.zh-cn.html
+++ b/lib/block.zh-cn.html
@@ -25,8 +25,8 @@
   </head>
   <body>
     <div>
-      <p>对不起，不支持您的浏览器。</p>
-      <p style="font-size: 80px">请另选浏览器</p>
+      <p>对不起，本站不支持您的浏览器。</p>
+      <p style="font-size: 80px">请选择其他浏览器</p>
       <p>
       <a href="http://www.google.com/chrome/">谷歌浏览器<!--chrome icon--></a> | 
       <a href="http://www.mozilla.com/en-US/firefox/fx/">火狐浏览器<!--chrome icon--></a> |
